--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/html-body.css">
     <link rel="stylesheet" href="estilos/header.css">
+    <link rel="stylesheet" href="estilos/section.css">
+    <link rel="stylesheet" href="estilos/footer.css">
     <title>Cordel</title>
 </head>
 <body>
@@ -13,7 +16,7 @@
             Por <a href="www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
         </p>
     </header>
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia  <br>
@@ -25,7 +28,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -37,7 +40,7 @@
         </p>
     </section> <br>
     
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -59,7 +62,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -71,7 +74,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
